[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/table.gd" type="Script" id=1]
[ext_resource path="res://addons/uipack-space/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/uipack-space/Fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Shaders/simple_stars.gdshader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 4 )
shader_param/bg_color = null

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 42
font_data = ExtResource( 3 )

[node name="Leaderboard" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="OutrunGradient" type="ColorRect" parent="."]
material = SubResource( 8 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 57.0
margin_top = 175.0
margin_right = 1817.0
margin_bottom = 675.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1800.0
margin_bottom = 49.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1793.0
margin_bottom = 42.0

[node name="name" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 354.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "name"
align = 1
valign = 1

[node name="score" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 358.0
margin_right = 712.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "score"
align = 1
valign = 1

[node name="time" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 716.0
margin_right = 1070.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "time"
align = 1
valign = 1

[node name="date" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1074.0
margin_right = 1428.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "date"
align = 1
valign = 1

[node name="accuracy" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1432.0
margin_right = 1786.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "accuracy"
align = 1
valign = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 1800.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1793.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/ScrollContainer"]
margin_right = 1786.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="."]
margin_left = 587.0
margin_top = 751.0
margin_right = 787.0
margin_bottom = 801.0
custom_fonts/font = SubResource( 5 )
text = "Start"

[node name="Quit" type="Button" parent="."]
margin_left = 1108.0
margin_top = 753.0
margin_right = 1308.0
margin_bottom = 803.0
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="Label" type="Label" parent="."]
margin_left = 510.0
margin_top = 12.0
margin_right = 1430.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 6 )
text = "asteroids on steroids"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 713.0
margin_top = 98.0
margin_right = 1209.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 7 )
text = "Leaderboard"
align = 1
valign = 1

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
